--- a/src/components/login.css
+++ b/src/components/login.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background: linear-gradient(to bottom right, #232a4c, #0f5a7f);
+    background: linear-gradient(to bottom right, #00bdfe, #143a46);
   
        
   }
