--- a/src/components/UserList.css
+++ b/src/components/UserList.css
@@ -5,7 +5,7 @@
   justify-content: center; */
   align-items: center;
   height: 100vh;
-  background: linear-gradient(to bottom right, #232a4c, #0f5a7f);
+  background: linear-gradient(to bottom right, #00bdfe, #143a46);
 }
 
 .user-list {
